--- a/OAI-5G/Deployment/mysql.yaml
+++ b/OAI-5G/Deployment/mysql.yaml
@@ -324,7 +324,8 @@ spec:
           configMap:
             name: mysql-config
       nodeSelector:
-        nodetype: server
+        kubernetes.io/arch: amd64
+        kubernetes.io/hostname: metallica
       containers:
         - name: mysql
           image: mysql:8.0
