--- a/Open5GS/Deployment/amf/amf-configmap.yaml
+++ b/Open5GS/Deployment/amf/amf-configmap.yaml
@@ -10,13 +10,15 @@ metadata:
 data:
   amf.yaml: |
     logger:
-        # level: debug
-        file: /var/log/open5gs/amf.log
-    
+      path:
+        file: /opt/open5gs/var/log/open5gs/amf.log
+
     global:
       max:
-        ue: 1500
+        ue: 1500  # The number of UE can be increased depending on memory size.
+    #    peer: 64
 
+    
     sbi:
       server:
         no_tls: true
@@ -30,60 +32,55 @@ data:
         cert: /etc/open5gs/tls/amf.crt
 
     amf:
-        sbi:
-          - dev: eth0
-            advertise: open5gs-amf
+      sbi:
+        server:
+        - dev: eth0
+          advertise: open5gs-amf
+        client:
+          nrf:
+            - uri: http://open5gs-nrf:80
+      ngap: 
+        server:
+        - dev: eth0
 
-        ngap: 
-          - dev: eth0
+      guami:
+        - plmn_id:
+            mcc: 999
+            mnc: 70
+          amf_id:
+            region: 2
+            set: 1
+      tai:
+        - plmn_id:
+            mcc: 999
+            mnc: 70
+          tac: 1
 
-        guami:
-          - plmn_id:
-              mcc: 999
-              mnc: 70
-            amf_id:
-              region: 2
-              set: 1
-        tai:
-          - plmn_id:
-              mcc: 999
-              mnc: 70
-            tac: 1
+      plmn_support:
+        - plmn_id:
+            mcc: 999
+            mnc: 70
+          s_nssai:
+            - sst: 1
+            - sst: 1
+              sd: 000001
+      security:
+          integrity_order : [ NIA2, NIA1, NIA0 ]
+          ciphering_order : [ NEA0, NEA1, NEA2 ]
+      network_name:
+          full: Open5GS
+      amf_name: open5gs-amf
+      time:
+        t3512:
+          value: 540 # 9 minutes * 60 = 540 seconds
 
-        plmn_support:
-          - plmn_id:
-              mcc: 999
-              mnc: 70
-            s_nssai:
-              - sst: 1
-              - sst: 1
-                sd: 000001
-        security:
-            integrity_order : [ NIA2, NIA1, NIA0 ]
-            ciphering_order : [ NEA0, NEA1, NEA2 ]
-        network_name:
-            full: Open5GS
-        amf_name: open5gs-amf
-
-        metrics:
-          addr: 0.0.0.0
-          port: 9090
+      metrics:
+        server:
+          - address: 0.0.0.0
+            port: 9090
 
     nrf:
       sbi:
         - name: open5gs-nrf
 
-    # scp:
-    #   sbi:
-    #     - name: open5gs-scp
-        
-    usrsctp:
-    time:
-      t3512:
-        value: 540     # 9 mintues * 60 = 540 seconds
-      nf_instance:
-        heartbeat: 20
-      message:
-        duration: 3000
-      handover:
-        duration: 500
+    
