--- a/Open5GS/Deployment/nssf/nssf-configmap.yaml
+++ b/Open5GS/Deployment/nssf/nssf-configmap.yaml
@@ -8,8 +8,14 @@ metadata:
 data:
   nssf.yaml: |
     logger:
-        file: /var/log/open5gs/nssf.log
+      path:
+        file: /opt/open5gs/var/log/open5gs/nssf.log
     
+    global:
+      max:
+        ue: 1500  # The number of UE can be increased depending on memory size.
+    #    peer: 64
+
     sbi:
       server:
         no_tls: true
@@ -17,35 +23,30 @@ data:
         no_tls: true
 
     nssf:
-        sbi:
-          - addr: 0.0.0.0
+      sbi:
+        server:
+          - address: 0.0.0.0
             advertise: open5gs-nssf
-        nsi:
-          - name: open5gs-nrf
-            s_nssai:
-              sst: 1
-          - name: open5gs-nrf
-            s_nssai:
-              sst: 1
-              sd: 1
-          - name: open5gs-nrf
-            s_nssai:
-              sst: 2
-              sd: 2
-          - name: open5gs-nrf
-            s_nssai:
-              sst: 3
-              sd: 3
-          - name: open5gs-nrf
-            s_nssai:
-              sst: 4
-              sd: 4
-
-              
-    nrf:
-        sbi:
-          - name: open5gs-nrf
-    
-    # scp:
-    #     sbi:
-    #       - name: open5gs-scp
+        client:
+          nrf:
+            - uri: http://open5gs-nrf:80
+          nsi:
+            - uri: http://open5gs-nrf:80
+              s_nssai:
+                sst: 1
+            - uri: http://open5gs-nrf:80
+              s_nssai:
+                sst: 1
+                sd: 1
+            - uri: http://open5gs-nrf:80
+              s_nssai:
+                sst: 2
+                sd: 2
+            - uri: http://open5gs-nrf:80
+              s_nssai:
+                sst: 3
+                sd: 3
+            - uri: http://open5gs-nrf:80
+              s_nssai:
+                sst: 4
+                sd: 4
