--- a/Open5GS/Deployment/scp/scp.yaml
+++ b/Open5GS/Deployment/scp/scp.yaml
@@ -43,14 +43,14 @@ spec:
 
       containers:
         # - name: tcpdump-scp
-        #   image: maikovisky/open5gs:2.6.4
+        #   image: gradiant/open5gs:2.7.1
         #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/scp-%F_%H%M.pcap"]
         #   volumeMounts:
         #     - name: tcpdump-persistent-storage
         #       mountPath: /var/tcpdump
 
         - name: scp
-          image: maikovisky/open5gs:2.6.4
+          image: gradiant/open5gs:2.7.1
           imagePullPolicy: Always
           securityContext:
             privileged: true
@@ -73,7 +73,7 @@ spec:
           command: ["open5gs-scpd", "-c", "/open5gs/config-map/scp.yaml"]
 
         # - name: metrics-scp
-        #   image: maikovisky/open5gs:2.6.4
+        #   image: gradiant/open5gs:2.7.1
         #   command: ["/bin/prometheus-node-exporter"]
       volumes:
         - name: open5gs-scp-config
