--- a/Open5GS/Deployment/smf/smf-configmap.yaml
+++ b/Open5GS/Deployment/smf/smf-configmap.yaml
@@ -8,7 +8,13 @@ metadata:
 data:
   smf.yaml: |
     logger:
-        file: /var/log/open5gs/smf.log
+      path:
+        file: /opt/open5gs/var/log/open5gs/smf.log
+
+    global:
+      max:
+        ue: 1500  # The number of UE can be increased depending on memory size.
+    #    peer: 64
 
     sbi:
       server:
@@ -18,25 +24,35 @@ data:
 
     smf:
       sbi:
-        - dev: eth0
-          port: 80
-          advertise: open5gs-smf
-      metrics:
-        addr: 0.0.0.0
-        port: 9090
+        server:
+          - dev: eth0
+            port: 80
+            advertise: open5gs-smf
+        client:
+          nrf:
+            - uri: http://open5gs-nrf:80
       pfcp:
-        - dev: eth0
+        server:
+          - dev: eth0
+        client:
+          upf:
+            - address: open5gs-upf-1
       gtpc:
-        - dev: eth0
+        server:
+          - dev: eth0
       gtpu:
-        - dev: eth0
-      subnet:
-        - addr: 10.41.0.1/16
+        server:
+          - dev: eth0
+      metrics:
+        server:
+          address: 0.0.0.0
+          port: 9090
+      session:
+        - subnet: 10.45.0.0/16
+          gateway: 10.45.0.1
           dnn: default
-        # - addr: 10.41.0.1/16
-        #   dnn: slice01
       dns:
-        - 10.96.0.10
+      - 10.96.0.10
       mtu: 1400
       ctf:
         enabled: auto
@@ -48,27 +64,4 @@ data:
             dnn:
               - default
 
-    nrf:
-      sbi:
-        - name: open5gs-nrf
-
-
-    upf:
-      pfcp:
-        # - addr: open5gs-upf
-        #   dnn: [internet]
-        - addr: open5gs-upf-1
-          dnn: [default]
-
-    metrics:
-        addr: 0.0.0.0
-        port: 9090
-
-    time:
-      nf_instance:
-        heartbeat: 20
-      message:
-        duration: 3000
-      handover:
-        duration: 500
 
