--- a/Open5GS/Deployment/udr/udr.yaml
+++ b/Open5GS/Deployment/udr/udr.yaml
@@ -40,7 +40,7 @@ spec:
         kubernetes.io/hostname: metallica
       containers:
         - name: udr
-          image: maikovisky/open5gs:2.6.4
+          image: gradiant/open5gs:2.7.1
           imagePullPolicy: Always
           ports:
             - name: http2-80
