--- a/Free5GC/Deployment/base/persistent-log.yaml
+++ b/Free5GC/Deployment/base/persistent-log.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: free5gc-tcpdump-pv-claim
+  name: free5gc-mongodb-pv-claim
   namespace: free5gc
 spec:
-  storageClassName: rook-cephfs
+  storageClassName: rook-ceph-fs-simple
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
