--- a/Open5GS/Deployment/base/persistent-log.yaml
+++ b/Open5GS/Deployment/base/persistent-log.yaml
@@ -10,3 +10,16 @@ spec:
   resources:
     requests:
       storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: open5gs-mongodb-pv-claim
+  namespace: cemenin
+spec:
+  storageClassName: rook-ceph-fs-simple
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 100Mi
